# google_coding_competitions

./: .gitmodules  project.bashrc
codejam/2020/qualification_round/question_1/src/: main.cpp  question.txt
codejam/2020/qualification_round/question_2/src/: main.cpp  question.txt
codejam/2020/qualification_round/question_3/src/: main.cpp  question.txt
codejam/2020/qualification_round/question_4/src/: local_testing_tool.py  main.cpp  question.txt
codejam/2020/qualification_round/question_5/src/: input.txt  main.cpp  question.txt
codejam/2020/round_1a/question_1/src/: main.cpp  question.txt
codejam/2020/round_1a/question_2/src/: main.cpp  question.txt
codejam/2020/round_1a/question_3/src/: main.cpp  question.txt
codejam/2020/round_1b/question_1/src/: input.txt  main.cpp  question.txt
codejam/2020/round_1b/question_2/src/: main.cpp  question.txt
codejam/2020/round_1b/question_3/src/: main.cpp  question.txt
codejam/2020/round_1c/question_1/src/: main.cpp  question.txt
codejam/2020/round_1c/question_2/src/: main.cpp  question.txt
codejam/2020/round_1c/question_3/src/: main.cpp  question.txt
codejam/2021/qualification_round/question_1/src/: main.cpp  question.txt
codejam/2021/qualification_round/question_2/src/: main.cpp  question.txt
codejam/2021/qualification_round/question_3/src/: main.cpp  question.txt
google-hash_code-template/: CMakeLists.txt  Makefile
google-hash_code-template/src/: CMakeLists.txt  Data.hpp  Estimator.hpp  OutputPrinter.hpp  Solver.hpp  main.cpp  randomize.tpp
template/: main.cpp
(+100 files in other folders)
